F&GDEV/src/objects/Commission_Option__c.object
<CustomObject>
    <description>Object utilized for Product Development efforts</description>
    <fields>
        <fullName>Additional_Chargeback_Scenarios__c</fullName>
        <label>Additional Chargeback Scenarios</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ages__c</fullName>
        <label>Ages</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chargeback_on_Annuitizations__c</fullName>
        <label>Chargeback on Annuitizations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chargeback_on_Commissions__c</fullName>
        <label>Chargeback on Commissions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chargeback_on_Lapse__c</fullName>
        <label>Chargeback on Lapse</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chargeback_on_Surrenders__c</fullName>
        <label>Chargeback on Surrenders</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Effective_date__c</fullName>
        <label>Commission Effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Type__c</fullName>
        <label>Commission Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commission_on_Annuitizations__c</fullName>
        <label>Commission on Annuitizations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commissions__c</fullName>
        <label>Commissions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Replacements__c</fullName>
        <label>Internal Replacements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MGA_Additional_Comp_Life__c</fullName>
        <label>MGA Additional Comp Life</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MGA_Commission__c</fullName>
        <label>MGA Commission</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MGA_Comp_Life_Excess__c</fullName>
        <label>MGA Comp Life - Excess</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MGA_Comp_Life_First_Year_Bonus__c</fullName>
        <label>MGA Comp Life - First Year Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MGA_Comp_Life_Renewal_Period__c</fullName>
        <label>MGA Comp Life - Renewal Period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MGA_Comp_Life_Renewal__c</fullName>
        <label>MGA Comp Life - Renewal</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MGA_Comp_Life_Service_Fee__c</fullName>
        <label>MGA Comp Life - Service Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MGA_Comp_Life_Target__c</fullName>
        <label>MGA Comp Life - Target</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MGA_Service_Fee_Period__c</fullName>
        <label>MGA Service Fee Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Allowance__c</fullName>
        <label>Marketing Allowance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Power_Producer_Program_Eligible__c</fullName>
        <label>Power Producer Program Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Specification__c</fullName>
        <label>Product Specification</label>
        <referenceTo>Product_Specification__c</referenceTo>
        <relationshipLabel>Commission Options</relationshipLabel>
        <relationshipName>Commission_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Commission__c</fullName>
        <label>Street Commission</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Street_Comp_Life_Excess__c</fullName>
        <label>Street Comp Life - Excess</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Street_Comp_Life_Renewal_Period__c</fullName>
        <label>Street Comp Life - Renewal Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Comp_Life_Service_Fee__c</fullName>
        <label>Street Comp Life - Service Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Street_Comp_Life_Target__c</fullName>
        <label>Street Comp Life - Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Street_Comp_Life_renewal__c</fullName>
        <label>Street Comp Life - renewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Street_Service_Fee_Period__c</fullName>
        <label>Street Service Fee Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Trail_Commission__c</fullName>
        <label>Street Trail Commission</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TX_Comp_MGA__c</fullName>
        <label>TX Comp - MGA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TX_Comp_Street__c</fullName>
        <label>TX Comp - Street</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Trail_Years__c</fullName>
        <label>Trail Years</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trail_based__c</fullName>
        <label>Trail based</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Commission Option</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Specification__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Options</pluralLabel>
    <recordTypes>
        <fullName>Annuity</fullName>
        <active>true</active>
        <label>Annuity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Life</fullName>
        <active>true</active>
        <label>Life</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>